<resources>
    <string name="app_name">Property Schedule</string>

    <!-- Strings related to login -->
    <string name="title_home">Properties</string>
    <string name="title_versao">Version</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_maps">Map</string>
    <string name="itemSalvar">To save</string>
    <string name="action_sair">Disconnect</string>
    <string name="action_share">"To share "</string>
    <string name="tvNomeVersao">Property Schedule Barcellos</string>
    <string name="tvNomeDev">Developed by: Ocimara Ferreira Barcellos Carizato</string>
    <string name="tvVersaoAPP">Version: 1.0</string>
    <string name="tvCall">Contact: 98887-8482</string>
    <string name="tvNome">Property Schedule Barcellos</string>
    <string name="fontCasual">casual</string>
    <string name="edtEmail">E-MAIL</string>
    <string name="edtSenha">PASSWORD</string>
    <string name="btnLogin">Access</string>
    <string name="btnCadastre">Register</string>
    <string name="tvCidadeUF">City and state</string>
    <string name="tvEndereco">Property Address</string>
    <string name="tvDesc">"General description "</string>
    <string name="title_activity_lista_imoveis">Property List</string>
    <string name="tvDsImovel">Property Description</string>
    <string name="edtDsImovel">Enter the property characteristics</string>
    <string name="edtEndereco">Enter the address of the property.</string>
    <string name="tvDsCidade">"City "</string>
    <string name="edtCidade">Write City of Property</string>
    <string name="tvDsUf">State</string>
    <string name="tvDsEndereco">Address</string>
    <string name="btnMapa">View on Map</string>
    <string name="cadastro_usuario">USER REGISTRATION</string>
    <string name="e_mail">E-MAIL</string>
    <string name="senha">PASSWORD</string>
    <string name="repetir_senha">REPEAT PASSWORD</string>
    <string name="nome">NAME</string>
    <string name="cadastrar">REGISTER</string>
    <string name="cancelar">CANCEL</string>
    <string name="error_senha_corresponde">Passwords do not match.</string>
    <string name="error_senha_caracteres">Invalid password! Password must contain at least 8 characters with letters and numbers!</string>
    <string name="error_email_invalido">" Invalid email! "</string>
    <string name="error_email_cadastrado">"E-mail already registered! "</string>
    <string name="error_efetuar_cadastro">Error registering!</string>
    <string name="error_gravar_cadastro">Error writing User!</string>
    <string name="sucesso_cadastro">User registered successfully!</string>
    <string name="sucesso_salvar_imovel">Property Saved successfully!</string>
    <string name="error_salvar_imovel">Error saving property!</string>
    <string name="ds_select">Select</string>
    <string name="msg_email_senha">Fill in the E-mail and Password fields.</string>
    <string name="sucesso_login">Login done successfully!</string>
    <string name="error_usu_senha">Username or password is invalid! Try again!</string>
    <string name="error_end_encontrado">Address not found! Try again!</string>
    <string name="msg_conf_exclusao">Confirm Exclusion</string>
    <string name="msg_excluir_imovel">Do you want to delete the property:</string>
    <string name="msg_retorno_positivo">Yes</string>
    <string name="msg_retorno_negativo">No</string>
    <string name="sucesso_excluir_imovel">Property Excluded Successfully!</string>
    <string name="error_excluir_imovel">Error Excluding Property</string>
    <string name="msg_campo_vazio_email">Fill in the E-mail field</string>
    <string name="msg_campo_vazio_nome">Fill in the Name field</string>
    <string name="msg_campo_vazio_senha">Fill in Password</string>
    <string name="msg_campo_vazio_conf_senha">Fill in the password confirmation</string>
    <string name="msg_campo_vazio_ds_imovel">Fill in the field Property Description</string>
    <string name="msg_campo_vazio_endereco_imovel">Fill in the field Address of Property</string>
    <string name="msg_campo_vazio_cidade_imovel">Fill in the field City of Property</string>
    <string name="msg_campo_vazio_estado">Fill in the field State of Property</string>
</resources>
