<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin10"
    android:orientation="vertical"
    tools:context=".Activitys.CadImovelActivity"
    android:id="@+id/llContent"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/tvDsImovel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5"
        android:text="@string/tvDsImovel"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/edtDsImovel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5"
        android:gravity="top|left"
        android:hint="@string/edtDsImovel"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLines="6"
        android:minLines="1"
        android:scrollbars="vertical" />


    <TextView
        android:id="@+id/tvDsEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5"
        android:text="Endereço"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/edtEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5"
        android:hint="@string/edtEndereco"></EditText>

            <TextView
                android:id="@+id/tvDsCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin5"
                android:text="@string/tvDsCidade"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin5"
                android:hint="@string/edtCidade"
                android:inputType="text"
                tools:layout_editor_absoluteY="1dp" />
            <TextView
                android:id="@+id/tvDsUF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin5"
                android:text="@string/tvDsUf"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="18sp"
                android:textStyle="bold" />
            <Spinner
                android:id="@+id/spnUF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin5"
                android:autofillHints="Estado"
                android:persistentDrawingCache="none"></Spinner>
            <Button
                android:id="@+id/btnMapa"
                android:theme="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin5"
                android:onClick="clickVerMapa"
                android:text="@string/btnMapa" />


</LinearLayout>
</ScrollView>