<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin5"
    app:cardElevation="@dimen/CadElev">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvCidadeUf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvCidadeUF"
                android:textSize="@dimen/font28"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvEndereco" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/tvDesc" />
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>